--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,3 @@
-.overlay {
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    background-color: #2d2d2d;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    opacity: .3;
-}
 h3 {
     font-family: 'Palemonas';
     text-align: center;
@@ -20,6 +10,6 @@ h3 {
     display: none;
     transition: .5s;
 }
-.visible {
+.active {
     display: block;
 }
