--- a/src/app/note-container/note-text/note-text.component.html
+++ b/src/app/note-container/note-text/note-text.component.html
@@ -1,24 +1,28 @@
-<ng-container *ngFor="let subtext of note_text?.childNodes" [ngSwitch]="subtext.tagName">
-    <ng-container *ngSwitchCase="'item'">
-        <p class="note"  id="{{ findAttributeValue(subtext.attributes, 'xml:id') }}" *ngIf="findAttributeValue(subtext.attributes, 'xml:id') === note_id">
+<ng-container *ngFor="let subtext of note_text?.childNodes" [ngSwitch]="true">
+    <ng-container *ngSwitchCase="subtext.tagName === 'item'">
+        <p class="note" id="{{ findAttributeValue(subtext.attributes, 'xml:id') }}"
+            *ngIf="findAttributeValue(subtext.attributes, 'xml:id') === note_id">
             <app-note-text [note_text]="subtext">
             </app-note-text>
         </p>
     </ng-container>
-    <ng-container *ngSwitchCase="'hi'">
-        <i *ngIf="isSubset([{name: 'rend', value: 'italic'}], subtext.attributes)">
+    <ng-container
+        *ngSwitchCase="subtext.tagName === 'hi' && isSubset([{name: 'rend', value: 'italic'}], subtext.attributes)">
+        <i>
             <app-note-text [note_text]="subtext">
             </app-note-text>
         </i>
     </ng-container>
-    <ng-container *ngSwitchCase="'hi'">
-        <b *ngIf="isSubset([{name: 'rend', value: 'bold'}], subtext.attributes)">
+    <ng-container
+        *ngSwitchCase="subtext.tagName === 'hi' && isSubset([{name: 'rend', value: 'bold'}], subtext.attributes)">
+        <b>
             <app-note-text [note_text]="subtext">
             </app-note-text>
         </b>
     </ng-container>
-    <ng-container *ngSwitchCase="'hi'">
-        <span *ngIf="isSubset([{name: 'rend', value: 'quote'}], subtext.attributes)">
+    <ng-container
+        *ngSwitchCase="subtext.tagName === 'hi' && isSubset([{name: 'rend', value: 'quote'}], subtext.attributes)">
+        <span>
             «<app-note-text [note_text]="subtext">
             </app-note-text>»
         </span>
