--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -18,7 +18,7 @@
     </ng-container>
     <ng-container *ngSwitchCase="subtext.tagName === 'lg' && isSubset([{name: 'type', value: 'terzina'}], subtext.attributes)">
         <div id="{{ findAttributeValue(subtext.attributes, 'xml:id') }}"
-            class="{{ findAttributeValue(subtext.attributes, 'type') }}" [ngClass]="{ 'paraphraseActive': this.settings.showParaphrase }" appAlign [scrollRef]="scrollRef" [paraphrColumnRef]="paraphrColumnRef">
+            class="{{ findAttributeValue(subtext.attributes, 'type') }}" [ngClass]="{ 'paraphraseActive': this.settings.showParaphrase }">
             <p class="inner">
                 <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings">
                 </app-main-text>
