update css paraphrase

--- a/src/app/header/dropdown/dropdown.component.html
+++ b/src/app/header/dropdown/dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown">
     <div class="d-flex justify-content-end align-items-center">
         <!--<h6 *ngIf="open">Settings</h6>-->
-        <a href="#" class="settings dropdown-toggle-icon" role="button" (click)="toggleMenu()">
+        <a class="settings dropdown-toggle-icon" role="button" (click)="toggleMenu()">
             <fa-icon [ngClass]="{ 'book-open-icon': open }" class="book-icon d-flex align-items-center" [icon]="open? 'book-open' : 'book'">
             </fa-icon>
         </a>
