--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,9 +7,10 @@ h3 {
     padding: 0 2rem;
 }
 .paraphrase-text {
-    content-visibility: hidden;
+    position: absolute;
+    left: -100%;
     transition: .35s;
 }
 .active {
-    content-visibility: visible;
+    position: static;
 }
