--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,14 +3,18 @@ h3 {
     text-align: center;
     font-weight: 600;
 }
+
 .text-column {
     padding: 0 2rem;
 }
+
 .paraphrase-text {
     position: absolute;
-    left: -100%;
+    right: -100%;
     transition: .35s;
 }
+
 .active {
     position: static;
+    right: 0;
 }
