--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,12 +9,17 @@ h3 {
 }
 
 .paraphrase-text {
-    position: absolute;
+    position: fixed;
     right: -100%;
-    transition: .35s;
+    transition: transform .35s;
 }
 
 .active {
     position: static;
-    right: 0;
+}
+
+@media screen and (max-width: 820px) { 
+    .text {
+        padding: 0!important;
+    }
 }
