--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
         <h3 class="py-5" #scrollStart>Testo</h3>
         <app-main-text [main_text]="commedy_text" [settings]="settings"></app-main-text>
     </section>
-    <section class="text-column paraphrase-text" appAlign [paraphraseActive]="settings.showParaphrase" [scrolltrigger]="scrolltrigger" [ngClass]="{ 'active': this.settings.showParaphrase }" #paraphrColumn>
+    <section class="text-column paraphrase-text" appAlign [paraphraseActive]="settings.showParaphrase"
+        [scrolltrigger]="scrolltrigger" [ngClass]="{ 'active': this.settings.showParaphrase }" #paraphrColumn>
         <h3 class="py-5">Parafrasi</h3>
         <app-main-text [main_text]="paraphrase_text"></app-main-text>
     </section>
