--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -10,6 +10,10 @@ p.endecasillabo {
     font-family: 'Palemonas';
 }
 
+p.endecasillabo span {
+    white-space: nowrap;
+}
+
 p.endecasillabo span.line-number {
     position: absolute;
     transform: translateX(-2.5rem);
@@ -38,12 +42,18 @@ p.terzina-paraphrase {
     font-size: 1.3rem;
     font-family: 'Palemonas';
 }
+
 p.terzina-paraphrase span.paraphrase-fragment {
     margin-bottom: .3rem;
     display: inline-block;
 }
 
-.inner, .corresp {
+p.terzina-paraphrase span {
+    white-space: nowrap;
+}
+
+.inner,
+.corresp {
     position: relative;
 }
 
@@ -70,4 +80,16 @@ div.corresp::after {
     width: 4px;
     height: 100%;
     background-color: rgb(1, 209, 1);
+}
+
+@media screen and (max-width: 820px) { 
+    p.endecasillabo, p.terzina-paraphrase {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 768px) { 
+    p.endecasillabo, p.terzina-paraphrase {
+        font-size: 1.1rem;
+    }
 }
