--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,22 +4,12 @@ h3 {
     font-weight: 600;
 }
 
-.text-column {
-    
-}
-
 .paraphrase-text {
-    position: static;
-
+    position: fixed;
+    left: -100%;
     transition: transform .35s;
 }
 
 .active {
     position: static;
-}
-
-@media screen and (max-width: 820px) { 
-    .text {
-        padding: 0!important;
-    }
 }
