--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -38,3 +38,23 @@ h2 {
 .menu-icon:hover {
     opacity: .8;
 }
+
+@media screen and (max-width: 475px) { 
+    h1 {
+        font-size: 1.5rem;
+        padding-left: .5rem;
+    }
+    h2 {
+        font-size: 1.8rem
+    }
+}
+
+@media screen and (max-width: 380px) { 
+    h1 {
+        font-size: 1.2rem;
+        padding-left: .5rem;
+    }
+    h2 {
+        font-size: 1.5rem
+    }
+}
