--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,9 @@ h3 {
 .active {
     position: static;
 }
+
+@media screen and (max-width: 690px) { 
+    .hidden {
+        display: none;
+    }
+}
