--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="d-flex p-3 container-fluid justify-content-center flex-wrap">
-    <section class="d-flex flex-column align-items-center col-xl-5 col-md-6 col-6">
+    <section [ngClass]="{ 'hidden': this.settings.showParaphrase }" class="d-flex flex-column align-items-center col-xl-5 col-md-6 col-6">
         <h3 class="py-5" #scrollStart>Testo</h3>
         <app-main-text [main_text]="commedy_text" [settings]="settings"></app-main-text>
     </section>
