--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -93,3 +93,15 @@ div.corresp::after {
         font-size: 1.1rem;
     }
 }
+
+@media screen and (max-width: 690px) { 
+    div.corresp::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -15px;
+        width: 4px;
+        height: 100%;
+        background-color: transparent;
+    }
+}
