--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,6 +21,6 @@ section.active {
         display: none!important;
     }
     .paraphrase-text {
-        transition: none;
+        transform: none;
     }
 }
