--- a/src/app/main-text/paraphrase-text/paraphrase-text.component.css
+++ b/src/app/main-text/paraphrase-text/paraphrase-text.component.css
@@ -41,3 +41,9 @@ div.corresp::after {
         font-size: 1.1rem;
     }
 }
+
+@media screen and (max-width: 720px) { 
+    div.corresp::after {
+        background-color: none;
+    }
+}
