--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,12 +9,13 @@ section {
 }
 
 section.paraphrase-text {
-    display: none!important;
+    position: fixed;
+    left: -100%;
     transition: .5s;
 }
 
 section.active {
-    display: block!important;
+    position: static;
 }
 
 @media screen and (max-width: 720px) { 
@@ -22,6 +23,7 @@ section.active {
         display: none!important;
     }
     .paraphrase-text {
+        transform: translateY(0%);
         transition: none;
     }
 }
