--- a/src/app/main-text/paraphrase-text/paraphrase-text.component.css
+++ b/src/app/main-text/paraphrase-text/paraphrase-text.component.css
@@ -44,6 +44,6 @@ div.corresp::after {
 
 @media screen and (max-width: 720px) { 
     div.corresp::after {
-        background-color: none;
+        background-color: transparent;
     }
 }
