added router comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<app-header></app-header>
-<div class="d-flex p-3 container-fluid justify-content-center">
-    <section class="d-flex flex-column align-items-center" [ngClass]="{'hidden': this.settings.showParaphrase}">
-        <h3 class="py-5" #scrollStart>Testo</h3>
-        <app-comedy-text [main_text]="comedy_text" [settings]="settings"></app-comedy-text>
-    </section>
-    <section class="paraphrase-text d-flex flex-column align-items-center" [ngClass]="{'active': this.settings.showParaphrase}" #paraphrColumn>
-        <h3 class="py-5">Parafrasi</h3>
-        <app-paraphrase-text [main_text]="paraphrase_text"></app-paraphrase-text>
-    </section>
-</div>
-<app-note-container [notes]="notes"></app-note-container>
-<app-navigation></app-navigation>
+<app-router-container></app-router-container>
