--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-router-container [cantica]="cantica" [canto]="canto"></app-router-container>
+<router-outlet (activate)="onOutletLoaded($event)"></router-outlet>
+<!--<app-router-container [cantica]="cantica" [canto]="canto"></app-router-container>-->
