--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<router-outlet (activate)="onOutletLoaded($event)"></router-outlet>
-<!--<app-router-container [cantica]="cantica" [canto]="canto"></app-router-container>-->
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-navigation></app-navigation>
