--- a/src/app/router-container/router-container.component.html
+++ b/src/app/router-container/router-container.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="d-flex p-3 container-fluid justify-content-center">
     <section class="d-flex flex-column align-items-center" [ngClass]="{'hidden': this.settings.showParaphrase}">
         <h3 class="py-5" #scrollStart>Testo</h3>
