--- a/src/app/router-container/router-container.component.css
+++ b/src/app/router-container/router-container.component.css
@@ -18,6 +18,16 @@ section.active {
     position: static;
 }
 
+.nav {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+
 @media screen and (max-width: 720px) { 
     section.hidden {
         display: none!important;
