--- a/src/app/router-container/router-container.component.html
+++ b/src/app/router-container/router-container.component.html
@@ -9,4 +9,5 @@
         <app-paraphrase-text [main_text]="paraphrase_text"></app-paraphrase-text>
     </section>
 </div>
+<nav class="nav"><button>Back</button><button>Next</button></nav>
 <app-note-container [notes]="notes"></app-note-container>
