--- a/src/app/router-container/router-container.component.css
+++ b/src/app/router-container/router-container.component.css
@@ -23,7 +23,7 @@ section.active {
     width: 100%;
     bottom: 0;
     left: 0;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
 }
@@ -53,4 +53,8 @@ section.active {
         transform: translate(0)!important;
         transition: none!important;
     }
+    .nav {
+        padding: 1rem;
+    }
+    
 }
