--- a/src/app/main-text/comedy-text/comedy-text.component.css
+++ b/src/app/main-text/comedy-text/comedy-text.component.css
@@ -29,7 +29,7 @@ p.endecasillabo span.line-number {
 
 .sinalefe,
 .sineresi {
-    font-weight: 600;
+    font-weight: 200;
 }
 
 .note {
@@ -49,6 +49,17 @@ p.endecasillabo span.line-number {
     height: 100%;
     background-color: rgb(1, 209, 1);
 
+}
+
+.caesura-with-sinalefe {
+    position: relative;
+}
+
+.sinalefe-in-caesura {
+    position: absolute;
+    top: .3rem;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 @media screen and (max-width: 820px) { 
