--- a/src/app/router-container/router-container.component.html
+++ b/src/app/router-container/router-container.component.html
@@ -13,10 +13,10 @@
 <nav class="nav" [ngClass]="{'start': this.navigation?.prev && !this.navigation?.next}"
     [ngClass]="{'end': !this.navigation?.prev && this.navigation?.next}">
     <fa-icon class="angles"
-        [routerLink]="'/'+this.getCantica(this.navigation?.prev)+'/'+this.getCanto(this.navigation?.prev)"
+        [routerLink]="getLink(this.navigation?.prev)"
         *ngIf="this.navigation?.prev" [icon]="'angle-double-left'"></fa-icon>
     <fa-icon class="angles"
-        [routerLink]="'/'+this.getCantica(this.navigation?.next)+'/'+this.getCanto(this.navigation?.next)"
+        [routerLink]="getLink(this.navigation?.next)"
         *ngIf="this.navigation?.next" [icon]="'angle-double-right'"></fa-icon>
 </nav>
 <app-note-container [notes]="notes"></app-note-container>
