update firebase hosting

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,4 +1,4 @@
 .offcanvas {
-    background: url('../../assets/img/1-selva-oscura.jpg') no-repeat center center;
+    background: url('../../assets/img/1-selva-oscura.webp') no-repeat center center;
     background-size: cover;
 }
